--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,5 @@
 version: "3.3"
+
 services:
   plex:
     image: linuxserver/plex
@@ -24,9 +25,13 @@ services:
     volumes:
       - /data/2tb/sonarr/config:/config
       - /data/2tb/plex/tv:/tv
+      # - /data/2tb/rutorrent/downloads:/downloads
       - /data/2tb/transmission/downloads:/downloads
     ports:
       - 8989:8989
+    networks:
+      multimedia_default:
+        ipv4_address: 172.20.0.2
     restart: unless-stopped
 
   transmission:
@@ -45,6 +50,9 @@ services:
       - 9091:9091
       - 51413:51413
       - 51413:51413/udp
+    networks:
+      multimedia_default:
+        ipv4_address: 172.20.0.3
     restart: unless-stopped
 
   rutorrent:
@@ -61,6 +69,11 @@ services:
       - 5000:5000
       - 51413:51413
       - 6881:6881/udp
+    networks:
+      multimedia_default:
+        # This IP address conflicts with Transmission
+        # The idea is to keep .0.3 for the default torrent client
+        ipv4_address: 172.20.0.3
     restart: unless-stopped
 
   jackett:
@@ -75,6 +88,9 @@ services:
       - /data/2tb/jackett/config:/config
     ports:
       - 9117:9117
+    networks:
+      multimedia_default:
+        ipv4_address: 172.20.0.4
     restart: unless-stopped
 
   bazarr:
@@ -90,4 +106,15 @@ services:
       - /data/2tb/plex/tv:/tv
     ports:
       - 6767:6767
+    networks:
+      multimedia_default:
+        ipv4_address: 172.20.0.5
     restart: unless-stopped
+
+networks:
+  multimedia_default:
+    ipam:
+      driver: default
+        config:
+          - subnet: 172.20.0.0/16
+
