config[docker]: Use different paths for everything

--- a/.env
+++ b/.env
@@ -1,2 +1,15 @@
 COMPOSE_PROJECT_NAME=multimedia
-HDD_PATH=/data/4tb
+
+TV_SHOWS=/data/4tb/tv
+MOVIES=/data/4tb/movies
+
+PLEX=/docker/multimedia/plex
+SONARR=/docker/multimedia/sonarr
+RADARR=/docker/multimedia/radarr
+BAZARR=/docker/multimedia/bazarr
+JACKETT=/docker/multimedia/jackett
+
+TRANSMISSION=/docker/multimedia/transmission
+DELUGE=/docker/multimedia/deluge
+TORRENT_DOWNLOADS=/docker/multimedia/deluge/downloads
+
