config[docker]: moved containers back to the external hdd (except torrents)

--- a/.env
+++ b/.env
@@ -1,13 +1,13 @@
 COMPOSE_PROJECT_NAME=multimedia
 
-TV_SHOWS=/data/4tb/tv
-MOVIES=/data/4tb/movies
+TV_SHOWS=/data/2tb/tv
+MOVIES=/data/2tb/movies
 
-PLEX=/docker/multimedia/plex
-SONARR=/docker/multimedia/sonarr
-RADARR=/docker/multimedia/radarr
-BAZARR=/docker/multimedia/bazarr
-JACKETT=/docker/multimedia/jackett
+PLEX=/data/2tb/plex
+SONARR=/data/2tb/sonarr
+RADARR=/data/2tb/radarr
+BAZARR=/data/2tb/bazarr
+JACKETT=/data/2tb/jackett
 
 TRANSMISSION=/docker/multimedia/transmission
 DELUGE=/docker/multimedia/deluge
