config[deluge]: moved config back to external HDD. Removed transmission.

--- a/.env
+++ b/.env
@@ -8,8 +8,7 @@ SONARR=/data/2tb/sonarr
 RADARR=/data/2tb/radarr
 BAZARR=/data/2tb/bazarr
 JACKETT=/data/2tb/jackett
+DELUGE=/data/2tb/deluge
 
-TRANSMISSION=/docker/multimedia/transmission
-DELUGE=/docker/multimedia/deluge
 TORRENT_DOWNLOADS=/docker/multimedia/deluge/downloads
 
