--- a/.env
+++ b/.env
@@ -1,8 +1,19 @@
+#
+# Docker stack name
+#
 COMPOSE_PROJECT_NAME=multimedia
 
+#
+# Multimedia files location
+#
 TV_SHOWS=/data/2tb/tv
 MOVIES=/data/2tb/movies
 
+#
+# Docker containers' volumes locations (dirs will be created if don't exist).
+# Except for Plex, all the other volumes are very lightweight.
+# Storing them inside an external disk might be a good idea if you plan to run this on multiple machines using the same media library.
+#
 PLEX=/data/2tb/plex
 SONARR=/data/2tb/sonarr
 RADARR=/data/2tb/radarr
@@ -10,5 +21,10 @@ BAZARR=/data/2tb/bazarr
 JACKETT=/data/2tb/jackett
 DELUGE=/data/2tb/deluge
 
+#
+# Torrent client downloads directory. It will hold incomplete and completed downloads.
+# If you're using an external HDD to store your media files, 
+#   it might be a good idea to keep downloads (until moved by Sonarr/Radarr, and if you have enough space) in an SSD disk partition.
+#   This aims to avoid constant write ops on the external HDD.
+#
 TORRENT_DOWNLOADS=/docker/multimedia/deluge/downloads
-
