docker[muximux]: Web app manager

--- a/.env
+++ b/.env
@@ -20,6 +20,7 @@ RADARR=/data/2tb/radarr
 BAZARR=/data/2tb/bazarr
 JACKETT=/data/2tb/jackett
 DELUGE=/data/2tb/deluge
+MUXIMUX=/data/2tb/muximux
 
 #
 # Torrent client downloads directory. It will hold incomplete and completed downloads.
