--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -108,7 +108,6 @@ services:
   muximux:
     image: linuxserver/muximux
     container_name: muximux
-    network_mode: host
     environment:
       - PUID=1000
       - PGID=1000
@@ -116,7 +115,10 @@ services:
     volumes:
       - ${MUXIMUX}:/config
     ports:
-      - 80:80
+      - ${MUXIMUX_PORT}:80
+    networks:
+      default:
+        ipv4_address: 172.20.0.7
     restart: unless-stopped
 
 networks:
