config[muximux]: Set internal network address and changed port

--- a/.env
+++ b/.env
@@ -23,9 +23,14 @@ DELUGE=/data/2tb/deluge
 MUXIMUX=/data/2tb/muximux
 
 #
+# Muximux homepage port
+#
+MUXIMUX_PORT=80
+
+#
 # Torrent client downloads directory. It will hold incomplete and completed downloads.
 # If you're using an external HDD to store your media files, 
 #   it might be a good idea to keep downloads (until moved by Sonarr/Radarr, and if you have enough space) in an SSD disk partition.
 #   This aims to avoid constant write ops on the external HDD.
 #
-TORRENT_DOWNLOADS=/docker/multimedia/deluge/downloads
+TORRENT_DOWNLOADS=/data/2tb/deluge/downloads
