config[docker]: Support for multiple libraries
- Using docker-compose.override.yml for additional media paths
- Updated docs to reflect latest HDD directories structure
- Added setup instructions about docker-compose.override.yml
- Included 'docker image prune' command after updating images

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       - ${PLEX}/config:/config
       - ${TV_SHOWS}:/tv
       - ${MOVIES}:/movies
+      - ${PICTURES}:/pictures
     devices:
       - /dev/dri:/dev/dri
     restart: unless-stopped
