config[docker]: Extracted TIMEZONE to .env file

--- a/.env
+++ b/.env
@@ -36,3 +36,8 @@ MUXIMUX_PORT=80
 #
 TORRENT_DOWNLOADS=/docker/multimedia/deluge/downloads
 
+#
+# Your local timezone
+#
+TIMEZONE=America/Argentina/Buenos_Aires
+
