--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ services:
       - ${TV_SHOWS}:/tv
       - ${MOVIES}:/movies
       - ${PICTURES}:/pictures
+    labels:
+      - com.centurylinklabs.watchtower.enable=true
     restart: unless-stopped
 
   sonarr:
@@ -32,6 +34,8 @@ services:
     networks:
       default:
         ipv4_address: 172.20.0.2
+    labels:
+      - com.centurylinklabs.watchtower.enable=true
     restart: unless-stopped
 
   deluge:
@@ -49,6 +53,8 @@ services:
     networks:
       default:
         ipv4_address: 172.20.0.3
+    labels:
+      - com.centurylinklabs.watchtower.enable=true
     restart: unless-stopped
 
   jackett:
@@ -66,6 +72,8 @@ services:
     networks:
       default:
         ipv4_address: 172.20.0.4
+    labels:
+      - com.centurylinklabs.watchtower.enable=true
     restart: unless-stopped
 
   bazarr:
@@ -84,6 +92,8 @@ services:
     networks:
       default:
         ipv4_address: 172.20.0.5
+    labels:
+      - com.centurylinklabs.watchtower.enable=true
     restart: unless-stopped
 
   radarr:
@@ -102,6 +112,8 @@ services:
     networks:
       default:
         ipv4_address: 172.20.0.6
+    labels:
+      - com.centurylinklabs.watchtower.enable=true
     restart: unless-stopped
 
   muximux:
@@ -118,7 +130,18 @@ services:
     networks:
       default:
         ipv4_address: 172.20.0.7
+    labels:
+      - com.centurylinklabs.watchtower.enable=true
     restart: unless-stopped
+
+  watchtower:
+    image: v2tec/watchtower
+    container_name: watchtower
+    network_mode: host
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+      - ${HOME}/.docker/config.json:/config.json
+    command: --label-enable --cleanup --schedule "0 4 * * *"
 
 networks:
   default:
