install[portainer]: Docker management app

--- a/.env
+++ b/.env
@@ -22,9 +22,10 @@ BAZARR=/data/2tb/bazarr
 JACKETT=/data/2tb/jackett
 DELUGE=/data/2tb/deluge
 MUXIMUX=/data/2tb/muximux
+PORTAINER=/data/2tb/portainer
 
 #
-# Muximux homepage port
+# Container ports
 #
 MUXIMUX_PORT=80
 
