install[calibre]: Books managing app

--- a/.env
+++ b/.env
@@ -23,11 +23,18 @@ JACKETT=/data/2tb/jackett
 DELUGE=/data/2tb/deluge
 MUXIMUX=/data/2tb/muximux
 PORTAINER=/data/2tb/portainer
+CALIBRE=/data/2tb/calibre
 
 #
 # Container ports
 #
 MUXIMUX_PORT=80
+
+#
+# Credentials
+#
+CALIBRE_USERNAME=cmiranda
+CALIBRE_PASSWORD=94d74fb270e74383fb99434b91c75118
 
 #
 # Torrent client downloads directory. It will hold incomplete and completed downloads.
