config[calibre]: Set network ipv4 address

--- a/.env
+++ b/.env
@@ -26,7 +26,8 @@ PORTAINER=/data/2tb/portainer
 CALIBRE=/data/2tb/calibre
 
 #
-# Credentials
+# Calibre credentials
+# PASSWORD => md5 hash for the calibre desktop gui.
 #
 CALIBRE_USERNAME=cmiranda
 CALIBRE_PASSWORD=94d74fb270e74383fb99434b91c75118
