--- a/.env
+++ b/.env
@@ -4,6 +4,11 @@
 COMPOSE_PROJECT_NAME=mediabox
 
 #
+# My custom domain
+#
+DOMAIN=crismiranda.net
+
+#
 # Multimedia files location
 #
 TV_SHOWS=/data/2tb/media/tv
@@ -21,7 +26,6 @@ RADARR=/data/2tb/radarr
 BAZARR=/data/2tb/bazarr
 JACKETT=/data/2tb/jackett
 DELUGE=/data/2tb/deluge
-MUXIMUX=/data/2tb/muximux
 PORTAINER=/data/2tb/portainer
 CALIBRE=/data/2tb/calibre
 
