install[organizr]: Dashboard app

--- a/.env
+++ b/.env
@@ -28,6 +28,7 @@ JACKETT=/data/2tb/jackett
 DELUGE=/data/2tb/deluge
 PORTAINER=/data/2tb/portainer
 CALIBRE=/data/2tb/calibre
+ORGANIZR=/data/2tb/organizr
 
 #
 # Calibre credentials
