--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -239,7 +239,7 @@ services:
       - ${PORTAINER}:/data
 
   organizr:
-    image: linuxserver/organizr
+    image: organizrtools/organizr-v2
     container_name: organizr
     networks:
       default:
