install[duplicati]: Mediabox backups

--- a/.env
+++ b/.env
@@ -35,6 +35,7 @@ DELUGE=/data/ssd/mediabox/deluge
 PORTAINER=/data/ssd/mediabox/portainer
 CALIBRE=/data/ssd/mediabox/calibre
 ORGANIZR=/data/ssd/mediabox/organizr
+DUPLICATI=/data/ssd/mediabox/duplicati
 
 #
 # Calibre credentials
